@@ -1,3 +1,6 @@
+20
+- Mention Bazarr, Mono, Thoradia VPN interface and WebGrab+Plus
+
 19
 - Add Rockchip
 
